--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ nav .fa-solid {
     border-radius: 10px;
     display: block;
     object-fit: cover;
-    transition: transform 0.5s;
+    transition: transform 0.5s ease;
 }
 
 .layer {
